fix world collection